API link fixed and search bug solved

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
                         <input id="inputValue" class="input-group mb-3" type="search" aria-label="Search">
                     </div>
                     <div class="col-3">
-                        <button id="searchButton" onclick="getWeather()" class="btn btn-outline-success fas fa-search fas fa-search"
+                        <button id="searchButton"  class="btn btn-outline-success fas fa-search fas fa-search"
                             type="submit"> </button>
                     </div>
                 </div>
 
-                <ul class="list-group ">
+                <li class="history">
 
-                </ul>
+                </li>
             </div>
             <div id="col" class="col-lg-8 col-md-12 hidden ">
                 <div id="card0" class="row2">
